log
Tue, Apr 15, 2025  9:21:24 PM: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:438:47: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
                                               ^~~                  ~~~
test.c:439:26: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
                          ^~~               ~~~
test.c:442:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
                 ^~~                                                                                                                                                                                           ~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Tue, Apr 15, 2025  9:31:37 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:438:47: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
                                               ^~~                  ~~~
test.c:439:26: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
                          ^~~               ~~~
test.c:442:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
                 ^~~                                                                                                                                                                                           ~~~
cc1.exe: all warnings being treated as errors
c85f325
Wed, Apr 16, 2025 10:51:20 AM: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
503eecd
Wed, Apr 16, 2025 10:52:09 AM: 
 hashmap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  2|4
total_score: 20/70
2a6dcfe
Wed, Apr 16, 2025 11:01:59 AM: 
 hashmap.c | 20 +++++++++++++-------
 1 file changed, 13 insertions(+), 7 deletions(-)
 tests:  0|0
aa0df3c
Wed, Apr 16, 2025 11:03:32 AM: 
 hashmap.c | 22 ++++++----------------
 1 file changed, 6 insertions(+), 16 deletions(-)
 tests:  2|4
total_score: 20/70
ced8d45
